policies/standard/pod_host_network/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodhostnetworkpolicy
  annotations:
    description: >-
      Access to host network should be disabled
spec:
  crd:
    spec:
      names:
        kind: K8sPodHostNetworkPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodhostnetworkpolicy

        violation[{"msg": msg}] {
          o := input_object[_]
          input_pid_enabled(o)
          msg := sprintf("The hostNetwork is not allowed: %v", [input.review.object.metadata.name])
        }

        input_object[o] {
          input.review.object.kind == "Pod"
          o := input.review.object
        }

        input_object[o] {
          input.review.object.kind == "CronJob"
          o := input.review.object.spec.jobTemplate.spec.template
        }

        input_object[o] {
          o := input.review.object.spec.template
        }


        input_pid_enabled(o) {
          o.spec.hostNetwork
        }
